  * {sssd,libnss-sss}.lintian-overrides: Update.
  * Move libsasl2-modules-gssapi to sssd Depends to make sure it gets
    installed, as it's needed in most cases.
  * control: Update maintainer address and repo location.
  * control: Bump the Standards-Version to 3.9.3, no changes.
  * control: Bump the debhelper build-dep to 9.
  * control: Add ${misc:Depends} to libipa-hbac*, libsss-sudo*.

 -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 16 Feb 2012 10:24:46 +0200

sssd (1.5.16-1) UNRELEASED; urgency=low

  [ Petter Reinholdtsen ]
  * New upstream version 1.2.4:
    - Resolves long-standing issues related to group processing with
      RFC2307bis LDAP servers.
    - Fixed bugs in RFC2307bis group memberships related to initgroups
      (Closes: #595564).
    - Fix tight-loop bug on systems with older OpenLDAP client
      libraries (such as Red Hat Enterprise Linux 5)
  * New Upstream Version 1.2.3:
    - Resolves CVE-2010-2940.
  * New Upstream Version 1.2.2:
    - The LDAP provider no longer requires access to the LDAP
      RootDSE. If it is unavailable, we will continue on with our best
      guess.
    - The LDAP provider will now log issues with TLS and GSSAPI to the
      syslog.
    - Significant performance improvement when performing initgroups
      on users who are members of large groups in LDAP.
    - The sss_client will now reconnect properly to the SSSD if the
      daemon is restarted.
      * This resolves an issue causing GDM to crash when logging out
        of a user after the SSSD had been restarted.
  * Correct package description for python-sss (Closes: #596215).
  * Update Standards-Version from 3.8.4 to 3.9.1.  No changes needed.

  [ Timo Aaltonen ]
  * New upstream release (1.5.16) (Closes: #595564, #624194, #640678,
    #643806).
    - Add libunistring-dev to build-deps.
  * Drop patch to ensure LDAP authentication never accept a zero
    length password, which is now included upstream.
  * sssd.upstart.ubuntu: