@@ -35,6 +35,7 @@ sssd (1.8.1-1) UNRELEASED; urgency=low
   * control: Bump the Standards-Version to 3.9.3, no changes.
   * control: Bump the debhelper build-dep to 9.
   * control: Add ${misc:Depends} to libipa-hbac*, libsss-sudo*.
+  * control, rules: Migrate to dh_python2.
 
  -- Timo Aaltonen <tjaalton@ubuntu.com>  Thu, 16 Feb 2012 10:24:46 +0200
 
